--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "std.ts": "0.0.15",
     "svgjs": "^2.6.2",
+    "tstl": "^2.4.14",
     "typescript": "^3.6.4"
   },
   "devDependencies": {
