change to parcel build system

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
+    "explorer.excludeGitIgnore": true,
     "cSpell.words": [
+        "CGAL",
         "topol",
         "toussaint",
         "tstl"
