--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,43 @@
 {
-    "compilerOptions": {
-      "target": "es6",
-      "lib": ["es6", "esnext", "dom", "es2015.collection"],
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "sourceMap": true,
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true,
-      "declaration": false,
-      "outDir": "dist"
+  "compilerOptions": {
+    /* Specify ECMAScript target version */
+    "target": "es5",
+    /* Specify module code generation */
+    "module": "CommonJS",
+    /* Specify library files to be included in the compilation. */
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
+    "experimentalDecorators": true,
+    "useDefineForClassFields": true,
+    /* Specify JSX code generation */
+    "jsx": "react",
+    /* Generate corresponding .map files */
+    "sourceMap": true,
+    /* Enable all strict type-checking options */
+    "strict": true,
+    /* Specify module resolution strategy */
+    "moduleResolution": "node",
+    /* Base directory to resolve non-absolute module names */
+    "baseUrl": "./src",
+    /* Maps imports to locations - e.g. ~models will go to ./src/models */
+    "paths": {
+      "~*": [
+        "./*"
+      ]
     },
-    "include": [ "src/*.ts" ],
-    "exclude": ["node_modules", "dist"]
-  }
+    /* List of folders to include type definitions from */
+    "typeRoots": [
+      "node_modules/@types",
+      "types/"
+    ],
+    /* allow import React instead of import * as React */
+    "allowSyntheticDefaultImports": true,
+    /*  Emit interop between CommonJS and ES modules */
+    "esModuleInterop": true,
+  },
+  "include": [
+    "src/**/*"
+  ]
+}
